grammar.js
    source_file: ($) =>
      seq(
        optional($._terminator),
        optional(
          seq(
            $._module_item,
            repeat(seq($._terminator, $._module_item)),
            optional($._terminator),
          ),
        ),
      ),

    _module_item: ($) =>
      choice(
        $.attribute_stmt,
        $.option_stmt,
        $._declaration,
        $.preprocessor_directive,
      ),

    attribute_stmt: ($) =>
      seq(kw('Attribute'), field('name', $.identifier), '=', field('value', $._expression)),

    option_stmt: ($) =>
      seq(
        kw('Option'),
        choice(
          kw('Explicit'),
          seq(kw('Compare'), choice(kw('Binary'), kw('Text'), kw('Database'))),
          seq(kw('Base'), $.integer_literal),
          kw('Private'),
        ),
      ),

    // ─── Preprocessor directives ──────────────────────────────────────
    //
    // VBA's conditional compilation directives (`#If` / `#ElseIf` / `#Else`
    // / `#End If`) and `#Const`. They appear at the same syntactic level
    // as declarations and statements, and may wrap either, so the inner
    // body is a synthetic `_preprocessor_body_item` choice covering both
    // module-level items and procedure-level statements.

    preprocessor_directive: ($) => choice($.preprocessor_const, $.preprocessor_if),

    preprocessor_const: ($) =>
      seq(kwSharp('Const'), field('name', $.identifier), '=', field('value', $._expression)),

    preprocessor_if: ($) =>
      seq(
        kwSharp('If'),
        field('condition', $._expression),
        kw('Then'),
        $._terminator,
        repeat(seq($._preprocessor_body_item, $._terminator)),
        repeat($.preprocessor_elseif),
        optional($.preprocessor_else),
        kwSharp('End'),
        kw('If'),
      ),

    preprocessor_elseif: ($) =>
      seq(
        kwSharp('ElseIf'),
        field('condition', $._expression),
        kw('Then'),
        $._terminator,
        repeat(seq($._preprocessor_body_item, $._terminator)),
      ),

    preprocessor_else: ($) =>
      seq(
        kwSharp('Else'),
        $._terminator,
        repeat(seq($._preprocessor_body_item, $._terminator)),
      ),

    // Happy-path scope: body items are statements. `_statement` already
    // includes `variable_declaration`, `const_declaration`, and nested
    // `preprocessor_directive`, which covers the typical `#If VBA7`
    // compatibility shim and conditional constants. Full procedure
    // declarations inside `#If` are deferred to a later iteration.
    _preprocessor_body_item: ($) => $._statement,

    // ─── Procedure declarations ────────────────────────────────────────

    _visibility: ($) => $.visibility,

    visibility: (_) => choice(kw('Public'), kw('Private'), kw('Friend')),

    accessor: (_) => choice(kw('Get'), kw('Let'), kw('Set')),

    sub_declaration: ($) =>
      seq(
        optional(field('visibility', $._visibility)),
        optional(kw('Static')),
        kw('Sub'),
        field('name', $.identifier),
        optional(field('parameters', $.parameter_list)),
        $._terminator,
        field('body', optional($.statement_block)),
        kw('End'),
        kw('Sub'),
      ),

    function_declaration: ($) =>
      seq(
        optional(field('visibility', $._visibility)),
        optional(kw('Static')),
        kw('Function'),
        field('name', $.identifier),
        optional(field('parameters', $.parameter_list)),
        optional(seq(kw('As'), field('return_type', $._type_name))),
        $._terminator,
        field('body', optional($.statement_block)),
        kw('End'),
        kw('Function'),
      ),

    property_declaration: ($) =>
      seq(
        optional(field('visibility', $._visibility)),
        optional(kw('Static')),
        kw('Property'),
        field('accessor', $.accessor),
        field('name', $.identifier),
        optional(field('parameters', $.parameter_list)),
        optional(seq(kw('As'), field('return_type', $._type_name))),
        $._terminator,
        field('body', optional($.statement_block)),
        kw('End'),
        kw('Property'),
      ),

    parameter_list: ($) => seq('(', optional(commaSep1($.parameter)), ')'),

    parameter: ($) =>
      seq(
        optional(kw('Optional')),
        optional(choice(kw('ByVal'), kw('ByRef'))),
        optional(kw('ParamArray')),
        field('name', $.identifier),
        optional(seq('(', ')')),
        optional(seq(kw('As'), field('type', $._type_name))),
        optional(seq('=', field('default', $._expression))),
      ),

    // ─── Variable / const / type / enum ───────────────────────────────

    variable_declaration: ($) =>
      seq(
        choice(kw('Dim'), kw('Public'), kw('Private'), kw('Static'), kw('Global')),
        optional(kw('WithEvents')),
        commaSep1($.variable_declarator),
      ),

    variable_declarator: ($) =>
      seq(
        field('name', $.identifier),
        optional($._array_bounds),
        optional(seq(kw('As'), optional(kw('New')), field('type', $._type_name))),
      ),

    _array_bounds: ($) =>
      seq(
        '(',
        optional(commaSep1($.array_bound)),
        ')',
      ),

    _type_name: ($) =>
      choice(
        $.builtin_type,
        $.qualified_name,
        $.identifier,
      ),

    builtin_type: ($) =>
      choice(
        kw('Boolean'),
        kw('Byte'),
        kw('Currency'),
        kw('Date'),
        kw('Double'),
        kw('Integer'),
        kw('Long'),
        kw('LongLong'),
        kw('LongPtr'),
        kw('Object'),
        kw('Single'),
        kw('String'),
        kw('Variant'),
      ),

    // ─── Statements ────────────────────────────────────────────────────

    statement_block: ($) =>
      seq(
        $._statement,
        repeat(seq($._terminator, $._statement)),
        optional($._terminator),
      ),

    _statement: ($) =>
      choice(
        $.if_statement,
        $.for_statement,
        $.for_each_statement,
        $.do_statement,
        $.while_statement,
        $.select_statement,
        $.with_statement,
        $.on_error_statement,
        $.resume_statement,
        $.goto_statement,
        $.exit_statement,
        $.return_statement,
        $.redim_statement,
        $.set_statement,
        $.let_statement,
        $.call_statement,
        $.variable_declaration,
        $.const_declaration,
        $.label,
        $.assignment,
        $.paren_less_call,
        $._expression_statement,
        $.preprocessor_directive,
      ),

    paren_less_call: ($) =>
      prec(
        -1,
        seq(
          field('function', choice($.identifier, $.member_access, $.leading_dot_member_access)),
          field('arguments', $.paren_less_argument_list),
        ),
      ),

    paren_less_argument_list: ($) => namedOrPositional($.identifier, $._expression),

    if_statement: ($) =>
      choice($._if_block, $._if_inline),

    _if_inline: ($) =>
      prec.right(
        seq(
          kw('If'),
          field('condition', $._expression),
          kw('Then'),
          field('consequence', $._statement),
          optional(seq(kw('Else'), field('alternative', $._statement))),
        ),
      ),

    _if_block: ($) =>
      seq(
        kw('If'),
        field('condition', $._expression),
        kw('Then'),
        $._terminator,
        field('consequence', optional($.statement_block)),
        repeat(
          seq(
            kw('ElseIf'),
            field('elseif_condition', $._expression),
            kw('Then'),
            $._terminator,
            field('elseif_body', optional($.statement_block)),
          ),
        ),
        optional(seq(kw('Else'), $._terminator, field('alternative', optional($.statement_block)))),
        kw('End'),
        kw('If'),
      ),

    for_statement: ($) =>
      seq(
        kw('For'),
        field('variable', $.identifier),
        '=',
        field('start', $._expression),
        kw('To'),
        field('end', $._expression),
        optional(seq(kw('Step'), field('step', $._expression))),
        $._terminator,
        field('body', optional($.statement_block)),
        kw('Next'),
        optional($.identifier),
      ),

    for_each_statement: ($) =>
      seq(
        kw('For'),
        kw('Each'),
        field('variable', $.identifier),
        kw('In'),
        field('collection', $._expression),
        $._terminator,
        field('body', optional($.statement_block)),
        kw('Next'),
        optional($.identifier),
      ),

    do_statement: ($) =>
      seq(
        kw('Do'),
        optional(
          seq(choice(kw('While'), kw('Until')), field('condition', $._expression)),
        ),
        $._terminator,
        field('body', optional($.statement_block)),
        kw('Loop'),
        optional(
          seq(choice(kw('While'), kw('Until')), field('trailing_condition', $._expression)),
        ),
      ),

    while_statement: ($) =>
      seq(
        kw('While'),
        field('condition', $._expression),
        $._terminator,
        field('body', optional($.statement_block)),
        kw('Wend'),
      ),

    select_statement: ($) =>
      seq(
        kw('Select'),
        kw('Case'),
        field('subject', $._expression),
        $._terminator,
        repeat($.case_clause),
        optional($.case_else_clause),
        kw('End'),
        kw('Select'),
      ),

    case_clause: ($) =>
      seq(
        kw('Case'),
        commaSep1($._case_match),
        $._terminator,
        field('body', optional($.statement_block)),
      ),

    case_else_clause: ($) =>
      seq(
        kw('Case'),
        kw('Else'),
        $._terminator,
        field('body', optional($.statement_block)),
      ),

    _case_match: ($) =>
      choice(
        seq($._expression, kw('To'), $._expression),
        seq(kw('Is'), choice('=', '<>', '<', '>', '<=', '>='), $._expression),
        $._expression,
      ),

    with_statement: ($) =>
      seq(
        kw('With'),
        field('object', $._expression),
        $._terminator,
        field('body', optional($.statement_block)),
        kw('End'),
        kw('With'),
      ),

    on_error_statement: ($) =>
      seq(
        kw('On'),
        kw('Error'),
        choice(
          seq(kw('GoTo'), choice($.integer_literal, $.identifier, '0')),
          seq(kw('Resume'), kw('Next')),
        ),
      ),

    resume_statement: ($) =>
      prec.right(seq(kw('Resume'), optional(choice(kw('Next'), $.integer_literal, $.identifier)))),

    exit_statement: ($) =>
      seq(
        kw('Exit'),
        choice(kw('Sub'), kw('Function'), kw('Property'), kw('For'), kw('Do')),
      ),

    assignment: ($) =>
      prec.right(
        100,
        seq(
          field('target', choice($._expression, $.leading_dot_member_access)),
          '=',
          field('value', $._expression),
        ),
      ),

    label: ($) => prec(1, seq(field('name', $.identifier), ':')),

    // ─── Expressions ──────────────────────────────────────────────────

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.new_expression,
        $.addressof_expression,
        $._primary_expression,
      ),

    _primary_expression: ($) =>
      choice(
        $.parenthesized_expression,
        $.call_expression,
        $.member_access,
        $.literal,
        $.identifier,
        $.me_expression,
      ),

    me_expression: (_) => kw('Me'),

    call_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field('function', $._primary_expression),
          token.immediate('('),
          optional(field('arguments', $.argument_list)),
          ')',
        ),
      ),

    argument_list: ($) => namedOrPositional($.identifier, $._expression),

    member_access: ($) =>
      prec.left(
        PREC.member,
        seq(
          field('object', $._primary_expression),
          '.',
          field('property', $.identifier),
        ),
      ),

    leading_dot_member_access: ($) =>
      prec(PREC.member, seq('.', field('property', $.identifier))),

    qualified_name: ($) =>
      prec.left(
        PREC.member,
        seq($.identifier, repeat1(seq('.', $.identifier))),
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(field('operator', choice('-', '+', kw('Not'))), field('operand', $._expression)),
      ),

    binary_expression: ($) => {
      const table = [
        ['^', PREC.power, 'right'],
        ['*', PREC.mul, 'left'],
        ['/', PREC.mul, 'left'],
        ['\\', PREC.int_div, 'left'],
        [kw('Mod'), PREC.mod, 'left'],
        ['+', PREC.add, 'left'],
        ['-', PREC.add, 'left'],
        ['&', PREC.concat, 'left'],
        [kw('Like'), PREC.compare, 'left'],
        [kw('Is'), PREC.compare, 'left'],
        ['=', PREC.compare, 'left'],
        ['<>', PREC.compare, 'left'],
        ['<', PREC.compare, 'left'],
        ['>', PREC.compare, 'left'],
        ['<=', PREC.compare, 'left'],
        ['>=', PREC.compare, 'left'],
        [kw('And'), PREC.and, 'left'],
        [kw('Or'), PREC.or, 'left'],
        [kw('Xor'), PREC.xor, 'left'],
        [kw('Eqv'), PREC.eqv, 'left'],
        [kw('Imp'), PREC.imp, 'left'],
      ];
      return choice(
        ...table.map(([op, p, assoc]) => {
          const rule = seq(
            field('left', $._expression),
            field('operator', op),
            field('right', $._expression),
          );
          return assoc === 'right' ? prec.right(p, rule) : prec.left(p, rule);
        }),
      );
    },

    // ─── Literals ─────────────────────────────────────────────────────

    literal: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.hex_literal,
        $.octal_literal,
        $.string_literal,
        $.date_literal,
        $.boolean_literal,
        $.nothing_literal,
        $.null_literal,
        $.empty_literal,
      ),

    integer_literal: (_) => token(/[0-9]+[%&^]?/),

    string_literal: (_) => token(seq('"', repeat(choice(/[^"\r\n]/, '""')), '"')),

    boolean_literal: (_) => choice(kw('True'), kw('False')),

    identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,

    _terminator: ($) => repeat1($._nl),
